Search API Solr search 1.x, dev (xx/xx/xxxx):
---------------------------------------------

Search API Solr search 1.0, RC 5 (05/17/2013):
----------------------------------------------
- #1190462 by drunken monkey: Documented that enabling HTML filter makes sense.
- #1986284 by drunken monkey: Updated common configs to the latest version.
- #1990422 by populist, drunken monkey: Added support for custom stream contexts
  for HTTP requests.
- #1957890 by drunken monkey, jwilson3: Fixed several bugs for facets.
- #1676224 by dasjo, morningtime, drunken monkey: Added support for Solr 4.x.
- #1985522 by chaby: Fixed use of instance method in static escape() method.
- #1979102 by drunken monkey: Fixed wrong limit for limit-less searches.
- #1978632 by chaby, drunken monkey: Fixed wrong check on softCommit.
- #1978600 by chaby: Fixed hook_requirements() for install phase.
- #1976930 by drunken monkey: Fixed duplicate method in SearchApiSolrField.

Search API Solr search 1.0, RC 4 (04/22/2013):
----------------------------------------------
- #1744250 by mollux, drunken monkey, das-peter: Added support for
  location-based searches.
- #1846254 by drunken monkey: Removed the SolrPhpClient dependency.
- #1934450 by jwilson3, jlapp: Fixed reference to removed method
  getFacetField().
- #1900644 by Deciphered: Fixed facet handling for multi-index searches.
- #1897386 by drunken monkey, NIck_vh: Update the common schema.

Search API Solr search 1.0, RC 3 (01/06/2013):
----------------------------------------------
- #1828260 by drunken monkey: Fixed filtering by index in multi-index searches.
- #1509380 by drunken monkey: Adopt common config files.
- #1815348 by drunken monkey: Fixed queryMultiple() to not use item ID as the
  array key.
- #1789204 by Steven Jones: Added way to easily alter the fl parameter.
- #1744250 by mollux, dasjo: Added support for location based search.
- #1813670 by guillaumev: Fixed check for autocomplete configuration in form.