@@ -11,9 +11,9 @@ files[] = includes/solr_connection.interface.inc
 files[] = includes/solr_field.inc
 files[] = includes/spellcheck.inc
 
-; Information added by drupal.org packaging script on 2013-05-17
-version = "7.x-1.0-rc5"
+; Information added by drupal.org packaging script on 2013-06-09
+version = "7.x-1.0"
 core = "7.x"
 project = "search_api_solr"
-datestamp = "1368804321"
+datestamp = "1370778059"
 
