@@ -1,5 +1,16 @@
 Search API Solr search 1.x, dev (xx/xx/xxxx):
 ---------------------------------------------
+- #1896080 by drunken monkey: Included additional required config files in the
+  module.
+- #1919572 by chaby: Fixed indexing of geohashes.
+- #2004596 by drunken monkey: Fixed "More Like This" for Solr 4.x.
+- #2007214 by drunken monkey: Fixed unsetting of object properties.
+- #1884312 by drunken monkey, mvc: Fixed resetting of HTTP password upon
+  re-saving of the configuration form.
+- #1957774 by drunken monkey: Fixed displayed link to local Solr servers.
+- #1721262 by Steven Jones, das-peter, drunken monkey: Added field collapsing
+  support.
+- #1549244 by cferthorney, drunken monkey: Added SSL Support for Solr servers.
 
 Search API Solr search 1.0, RC 5 (05/17/2013):
 ----------------------------------------------
